k8s/20-users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: yepez-sagnay-parra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: yepez-sagnay-parra-users:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet: { path: /health, port: 8000 }
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: yepez-sagnay-parra
spec:
  selector:
    app: users
  ports:
    - port: 8000
      targetPort: 8000
