k8s/21-vehicles.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicles
  namespace: yepez-sagnay-parra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehicles
  template:
    metadata:
      labels:
        app: vehicles
    spec:
      containers:
        - name: vehicles
          image: yepez-sagnay-parra-vehicles:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: vehicles
  namespace: yepez-sagnay-parra
spec:
  selector:
    app: vehicles
  ports:
    - port: 3000
      targetPort: 3000
