k8s/22-zones.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zones
  namespace: yepez-sagnay-parra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zones
  template:
    metadata:
      labels:
        app: zones
    spec:
      containers:
        - name: zones
          image: yepez-sagnay-parra-zones:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: { path: /api/v1/places, port: 8080 }
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: zones
  namespace: yepez-sagnay-parra
spec:
  selector:
    app: zones
  ports:
    - port: 8080
      targetPort: 8080
