k8s/23-assignments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignments
  namespace: yepez-sagnay-parra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assignments
  template:
    metadata:
      labels:
        app: assignments
    spec:
      containers:
        - name: assignments
          image: yepez-sagnay-parra-assignments:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet: { path: /health, port: 8001 }
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: assignments
  namespace: yepez-sagnay-parra
spec:
  selector:
    app: assignments
  ports:
    - port: 8001
      targetPort: 8001
