k8s/25-ms-audit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-audit
  namespace: yepez-sagnay-parra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-audit
  template:
    metadata:
      labels:
        app: ms-audit
    spec:
      containers:
        - name: ms-audit
          image: yepez-sagnay-parra-ms-audit:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: ms-audit
  namespace: yepez-sagnay-parra
spec:
  selector:
    app: ms-audit
  ports:
    - port: 3002
      targetPort: 3002
