k8s/31-kong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  namespace: yepez-sagnay-parra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong:3.9
          ports:
            - name: proxy
              containerPort: 8000
            - name: admin
              containerPort: 8001
          volumeMounts:
            - name: kong-config
              mountPath: /kong/declarative
          readinessProbe:
            httpGet: { path: /status, port: 8001 }
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: kong-config
          configMap:
            name: kong-declarative-config
---
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: yepez-sagnay-parra
spec:
  type: NodePort
  selector:
    app: kong
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
    - name: admin
      port: 8001
      targetPort: 8001
